# ensenia-hackaton

./: .dockerignore  .env.sample  .git-worktree-config  .gitignore  API_QUICK_WINS_PLAN.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  EXERCISE_GENERATION_FIX.md  EXERCISE_PERFORMANCE_OPTIMIZATION.md  IMPLEMENTATION_PLAN.md  Makefile  PACKAGE_MANAGEMENT.md  PRODUCT_SPEC.md  RAG_LOGGING_GUIDE.md  README.md  alembic.ini  db.sh  deploy.sh  docker-compose.yml  init_db.py  package-lock.json  package.json  pyproject.toml  pytest.ini  quick_start.sh  run_tests.sh  setup.sh  setup_test_db.sh  stop.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: __init__.py  acaaec37462f_add_input_mode_to_sessions_and_messages_.py  ae4552e35c02_initial_database_schema.py  ae4552e35c03_add_content_generation_fields.py
app/ensenia/: __init__.py  config.py  main.py
app/ensenia/api/: __init__.py
app/ensenia/core/: __init__.py  config.py
app/ensenia/database/: __init__.py  models.py  session.py
app/ensenia/models/: __init__.py  curriculum.py
app/ensenia/schemas/: errors.py  exercises.py
app/ensenia/scripts/: __init__.py  cleanup_databases.py  populate_rag_database.py  populate_rag_database_v2.py  test_pipeline.py  validate_connections.py
app/ensenia/services/: __init__.py  chat_service.py  content_generation_service.py  deepgram_service.py  elevenlabs_service.py  embedding_service.py  exercise_pool_service.py  exercise_repository.py  generation_service.py  pdf_processor.py  research_service.py  stream_orchestrator.py  websocket_manager.py
app/ensenia/utils/: __init__.py  text_processor.py
app/web/: .env.sample  .gitignore  README.md  index.html  package.json
app/web/src/: App.tsx  index.css
app/worker/: .gitignore  API_REFERENCE.md  README.md  TESTING_QUICKSTART.md  TEST_RESULTS.md  TEST_SUITE_SUMMARY.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.local.toml  wrangler.toml
app/worker/scripts/: init_db.sh  populate_vectorize.sh  populate_vectorize.ts  sample-data.sql  schema.sql  seed_data.sql  (+1 more)
scripts/: init-db.sql
tests/: __init__.py  conftest.py  test_api_endpoints_comprehensive.py  test_api_routes.py  test_chat_service.py  test_content_generation_integration.py  test_e2e_learn_flow.py  test_exercise_api.py  test_exercise_pool_service.py  test_exercise_repository.py  test_exercise_schemas.py  test_generation_service.py  test_integration_validation.py  test_research_service.py  test_session_api_enhanced.py  test_session_initialization.py  test_websocket_integration.py
tests/integration/: __init__.py  conftest.py  test_pipeline_smoke.py  test_worker_integration.py
tests/unit/: __init__.py  test_chunking.py  test_pdf_processor.py
tests/voice_integration/: __init__.py  test_rest_api_voice_modes.py  test_voice_modes_complete.py  test_voice_modes_performance_security.py  test_websocket_voice_modes.py
(+96 files in other folders)
